crates/uitest/fixtures/mir_check/borrowck_zst_mut_overlap.snap
---
source: crates/uitest/tests/mir_check.rs
expression: res
input_file: fixtures/mir_check/borrowck_zst_mut_overlap.fe
---
error[11-0002]: borrow conflict in `fn borrowck_zst_mut_overlap`
   ┌─ borrowck_zst_mut_overlap.fe:10:5
   │
 9 │     let m: mut Marker = mut h.marker
   │                             -------- `h` is borrowed here
10 │     h.marker = Marker {}
   │     ^^^^^^^^^^^^^^^^^^^^ access overlaps an active `mut` borrow
